# nutrika

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.mingw32  PageName.md  ProjectHome.md  README  aclocal.m4  config.h.in  configure  configure.ac  nutrika.desktop  nutrika.spec  nutrika.spec.bak
autom4te.cache/: output.0  output.5  requests  traces.0  traces.1  traces.5
data/: Makefile.am  Makefile.in  loader.py  queryDRI.sql  user.db
doc/: Makefile.am  Makefile.in  nutrika.1
m4/: ChangeLog
pixmaps/: Makefile.am  Makefile.in
po/: POTFILES.in  en.po  hu.po  nutrika.pot
src/: Makefile.am  Makefile.in  database.c  database.h  gui.c
